--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.10.0",
     "axios": "^1.6.5",
-    "next": "14.0.4",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.45.2",
-    "zod": "^3.22.4"
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
